--- a/microservices-config/src/main/resources/configurations/msvc-cliente.yml
+++ b/microservices-config/src/main/resources/configurations/msvc-cliente.yml
@@ -6,14 +6,14 @@ spring:
     name: msvc-cliente
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://db.tseqkdyltupklalpgtki.supabase.co:5432/postgres
-    username: postgres
+    url: jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:5432/postgres
+    username: postgres.tseqkdyltupklalpgtki
     password: 1997Guallaba
     hikari:
-      maximum-pool-size: 5
+      maximum-pool-size: 1
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
