--- a/microservices-config/src/main/resources/configurations/msvc-ventas.yml
+++ b/microservices-config/src/main/resources/configurations/msvc-ventas.yml
@@ -6,11 +6,11 @@ spring:
     name: msvc-ventas
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://db.tseqkdyltupklalpgtki.supabase.co:5432/postgres
-    username: postgres
+    url: jdbc:postgresql://aws-0-us-west-1.pooler.supabase.com:6543/postgres
+    username: postgres.tseqkdyltupklalpgtki
     password: 1997Guallaba
     hikari:
-      maximum-pool-size: 5
+      maximum-pool-size: 1
   jpa:
     hibernate:
       ddl-auto: create
