--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>microservices-compratotal</module>
 		<module>microservices-formapago</module>
 		<module>microservices-ventas</module>
+		<module>microservices-interfaz</module>
 	</modules>
 
 	<url/>
